# odp-secure-services

./: CODEOWNERS  Cargo.toml  deny.toml
.github/workflows/: check.yml
.husky/: pre-commit
ec-service-lib/src/: lib.rs  message_handler.rs  service.rs
ec-service-lib/src/services/: fw_mgmt.rs  mod.rs  notify.rs  thermal.rs  tpm.rs  tpm_sst.rs  tpm_stub.rs
odp-ffa/src/function/msg/: direct_message.rs  msg_send_direct_req2.rs  msg_send_direct_resp2.rs  register_payload.rs
platform/ihv1-sp/src/: main.rs
platform/ihv1-sp/src/baremetal/: mod.rs
platform/qemu-sp/linker/: qemu-ec-sp.dts
platform/qemu-sp/src/: battery.rs  main.rs
